// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSection renders with shouldAlertFailureCount = <false> 1`] = `
<DocumentFragment>
  <div
    class="result-section-class-name resultSection"
    data-automation-id="result-section"
  >
    <mock-headingelementforlevel
      headinglevel="2"
    >
      <mock-resultsectiontitle
        containerclassname="result-section-class-name"
        deps="[object Object]"
        sectionheadinglevel="2"
        shouldalertfailurescount="false"
        titlesize="title"
      />
    </mock-headingelementforlevel>
    <mock-resultsectioncontent
      containerclassname="result-section-class-name"
      deps="[object Object]"
      headinglevel="3"
      sectionheadinglevel="2"
      shouldalertfailurescount="false"
    />
  </div>
</DocumentFragment>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <false>: ResultSectionContent props 1`] = `
{
  "containerClassName": "result-section-class-name",
  "deps": {
    "getNextHeadingLevel": [Function],
  },
  "headingLevel": 3,
  "sectionHeadingLevel": 2,
  "shouldAlertFailuresCount": false,
}
`;

exports[`ResultSection renders with shouldAlertFailureCount = <true> 1`] = `
<DocumentFragment>
  <div
    class="result-section-class-name resultSection"
    data-automation-id="result-section"
  >
    <mock-headingelementforlevel
      headinglevel="2"
    >
      <mock-resultsectiontitle
        containerclassname="result-section-class-name"
        deps="[object Object]"
        sectionheadinglevel="2"
        shouldalertfailurescount="true"
        titlesize="title"
      />
    </mock-headingelementforlevel>
    <mock-resultsectioncontent
      containerclassname="result-section-class-name"
      deps="[object Object]"
      headinglevel="3"
      sectionheadinglevel="2"
      shouldalertfailurescount="true"
    />
  </div>
</DocumentFragment>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <true>: ResultSectionContent props 1`] = `
{
  "containerClassName": "result-section-class-name",
  "deps": {
    "getNextHeadingLevel": [Function],
  },
  "headingLevel": 3,
  "sectionHeadingLevel": 2,
  "shouldAlertFailuresCount": true,
}
`;

exports[`ResultSection renders with shouldAlertFailureCount = <undefined> 1`] = `
<DocumentFragment>
  <div
    class="result-section-class-name resultSection"
    data-automation-id="result-section"
  >
    <mock-headingelementforlevel
      headinglevel="2"
    >
      <mock-resultsectiontitle
        containerclassname="result-section-class-name"
        deps="[object Object]"
        sectionheadinglevel="2"
        titlesize="title"
      />
    </mock-headingelementforlevel>
    <mock-resultsectioncontent
      containerclassname="result-section-class-name"
      deps="[object Object]"
      headinglevel="3"
      sectionheadinglevel="2"
    />
  </div>
</DocumentFragment>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <undefined>: ResultSectionContent props 1`] = `
{
  "containerClassName": "result-section-class-name",
  "deps": {
    "getNextHeadingLevel": [Function],
  },
  "headingLevel": 3,
  "sectionHeadingLevel": 2,
  "shouldAlertFailuresCount": undefined,
}
`;
